--- a/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
@@ -40,7 +40,7 @@
                 <td>@detail.productName</td>
                 <td>@detail.productCategory</td>
 
-                <td class="text-center">
+                @*<td class="text-center">
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Admin" asp-route-Id="@detail.productId" asp-action="GetProductSellingHistory" class="btn btn-primary mx-1">
                             <i class="fas fa-edit"></i> Get
@@ -49,7 +49,7 @@
                             <i class="far fa-trash-alt"></i> Delete
                         </a>
                     </div>
-                </td>
+                </td>*@
             </tr>
             }
         </tbody>
