--- a/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
@@ -13,7 +13,7 @@
 
 <div class="container p-3">
     <div>
-        <a class="nav-link text-dark btn-primary font-weight-bold" style="margin: 12px; background-color: yellow;float: right" asp-controller="Admin" asp- asp-action="GetProductDetails">All Product Details List</a>
+        <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: white;float: right" asp-controller="Admin" asp- asp-action="GetProductDetails">@*List*@</a>
     </div>
     @if (Model.Count() > 0)
     {
@@ -40,16 +40,16 @@
                 <td>@detail.productName</td>
                 <td>@detail.productCategory</td>
 
-                @*<td class="text-center">
+                <td class="text-center">
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Admin" asp-route-Id="@detail.productId" asp-action="GetProductSellingHistory" class="btn btn-primary mx-1">
-                            <i class="fas fa-edit"></i> Get
-                        </a>
-                        <a asp-controller="Admin" asp-route-Id="@detail.productId" asp-action="DeleteCategory" class="btn btn-danger mx-3">
+                      @*  <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-1">
+                            <i class="fas fa-edit"></i> Add
+                        </a>*@
+                        <a asp-controller="Admin" asp-route-product="@detail.productId" asp-action="DeleteCategory" class="btn btn-danger mx-3">
                             <i class="far fa-trash-alt"></i> Delete
                         </a>
                     </div>
-                </td>*@
+                </td>
             </tr>
             }
         </tbody>
