--- a/OrderMngmntSystem/Views/Home/Index.cshtml
+++ b/OrderMngmntSystem/Views/Home/Index.cshtml
@@ -6,10 +6,9 @@
     <h2 class="display-4">Welcome</h2>
     <h1>Order Management System</h1>
     <div>
-        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightcoral; " asp-controller="Admin" asp-action="GetProductDetails">Admin</a></h2>
-        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightcoral; " asp-controller="Customer" asp-action="SearchOrderProducts">Customer</a></h2>
-        @*<button id="myAdminButton" class="float-lg-none submit-button w-30" style="background-color: Tomato;">Admin</button>
-        <button id="myCustomerButton" class="float-lg-none submit-button w-30" style="background-color: Tomato;">Customer</button>*@
+        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightgrey; " asp-controller="Admin" asp-action="GetProductDetails">Admin</a></h2>
+        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightgrey; " asp-controller="Customer" asp-action="AddProduct">Customer</a></h2>
+        
     </div>
 </div>
 
