--- a/OrderMngmntSystem/Views/Customer/AddProduct.cshtml
+++ b/OrderMngmntSystem/Views/Customer/AddProduct.cshtml
@@ -44,6 +44,15 @@
                     <div class="col-4 offset-4">
                         <input type="submit" class="btn btn-info w-100" value="Add" />
                     </div>
+                    @if(ViewBag.Message != null)
+                    {
+                        <a class="nav-link text-black-50 btn-outline-primary font-weight-bolder" style="position: relative; margin:10px;background-color: beige;float: right" asp-controller="Admin" asp-action="GetProductDetails">Get Product Details </a>
+                        <script type="text/javascript">
+                                      window.onload=function(){
+                                          alert("@ViewBag.Message");
+                                      };
+                        </Script>
+                    }
                 </div>
             </div>
         </div>
