--- a/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
@@ -45,9 +45,9 @@
                       @*  <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-1">
                             <i class="fas fa-edit"></i> Add
                         </a>*@
-                        <a asp-controller="Admin" asp-route-product="@detail.productId" asp-action="DeleteCategory" class="btn btn-danger mx-3">
-                            <i class="far fa-trash-alt"></i> Delete
-                        </a>
+                        @*<a asp-controller="Customer" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-3">
+                            <i class="far fa-trash-alt"></i> Add
+                        </a>*@
                     </div>
                 </td>
             </tr>
