--- a/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
@@ -13,7 +13,7 @@
 
 <div class="container p-3">
     <div>
-        <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: white;float: right" asp-controller="Admin" asp- asp-action="GetProductDetails">@*List*@</a>
+        <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: lavenderblush;float: right" asp-controller="Admin" asp- asp-action="GetCustomerDetails">Go To Customer Details</a>
     </div>
     @if (Model.Count() > 0)
     {
@@ -42,9 +42,9 @@
 
                 <td class="text-center">
                     <div class="w-75 btn-group" role="group">
-                      @*  <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-1">
-                            <i class="fas fa-edit"></i> Add
-                        </a>*@
+                       <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="DeleteCategory" class="btn btn-danger mx-1">
+                            <i class="fas fa-edit"></i> Delete
+                        </a>
                         @*<a asp-controller="Customer" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-3">
                             <i class="far fa-trash-alt"></i> Add
                         </a>*@
