--- a/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetProductDetails.cshtml
@@ -42,7 +42,7 @@
 
                 <td class="text-center">
                     <div class="w-75 btn-group" role="group">
-                       <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="DeleteCategory" class="btn btn-danger mx-1">
+                       <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="DeleteProduct" class="btn btn-danger mx-1">
                             <i class="fas fa-edit"></i> Delete
                         </a>
                         @*<a asp-controller="Customer" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-3">
