changes @ 13th april

--- a/OrderMngmntSystem/Views/Customer/AddProduct.cshtml
+++ b/OrderMngmntSystem/Views/Customer/AddProduct.cshtml
@@ -46,7 +46,7 @@
                     </div>
                     @if(ViewBag.Message != null)
                     {
-                        <a class="nav-link text-black-50 btn-outline-primary font-weight-bolder" style="position: relative; margin:10px;background-color: beige;float: right" asp-controller="Admin" asp-action="GetProductDetails">Get Product Details </a>
+                        <a class="nav-link text-black-50 btn-outline-primary font-weight-bolder" style="position: relative; margin:10px;background-color: beige;float: right" asp-controller="Customer" asp-action="ProductDetailsList">Get Product Details </a>
                         <script type="text/javascript">
                                       window.onload=function(){
                                           alert("@ViewBag.Message");
