--- a/OrderMngmntSystem/Views/Customer/DeleteProduct.cshtml
+++ b/OrderMngmntSystem/Views/Customer/DeleteProduct.cshtml
@@ -1,9 +1,9 @@
 ﻿@model OrderMngmntSystem.Models.ProductService
 
 @{
-    ViewData["Title"] = "Delete the products";
+    ViewData["Title"] = "Delete products";
 }
-<form method="post" asp-controller="Admin" asp-action="DeleteProduct">
+<form method="post" asp-controller="Customer" asp-action="DeleteProduct">
     <div>
         <div class="row">
             <div class="col-8">
@@ -38,11 +38,13 @@
                 <div class="form-group row">
                   
                     <div class="col-4 offset-4">
-                        <input type="submit" class="btn btn-info w-100" value="Delete" />
+                        <input type="submit" class="btn btn-danger mx-1" value="Delete" />
                     </div>
+
+        @* <h1>Deleted Successfully</h1>*@
                     @if(ViewBag.Message != null)
                     {
-                        <a class="nav-link text-black-50 btn-outline-primary font-weight-bolder" style="position: relative; margin:10px;background-color: beige;float: right" asp-controller="Admin" asp-action="GetProductDetails">Get Product Details </a>
+                        <a class="nav-link text-black-50 btn-outline-primary font-weight-bolder" style="position: relative; margin:10px;background-color: beige;float: right" asp-controller="Customer" asp-action="ProductDetailsList">Get Product Details </a>
                         <script type="text/javascript">
                                       window.onload=function(){
                                           alert("@ViewBag.Message");
