--- a/OrderMngmntSystem/Views/Home/Index.cshtml
+++ b/OrderMngmntSystem/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <h2 class="display-4">Welcome</h2>
     <h1>Order Management System</h1>
     <div>
-        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightgrey; " asp-controller="Admin" asp-action="AdminPage">Admin</a></h2>
-        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: relative; margin: 12px; background-color: lightgrey; " asp-controller="Customer" asp-action="AddProduct">Customer</a></h2>
+        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: unset; margin: 12px; background-color: lightgrey;  " asp-controller="Admin" asp-action="AdminPage">Admin</a></h2>
+        <h2><a class="nav-link text-dark btn-primary font-weight-bold" style="position: unset; margin: 12px; background-color: lightgrey;  " asp-controller="Customer" asp-action="CustomerPage">Customer</a></h2>
         
     </div>
 </div>
