--- a/OrderMngmntSystem/Views/Admin/GetCustomerOrderDetails.cshtml
+++ b/OrderMngmntSystem/Views/Admin/GetCustomerOrderDetails.cshtml
@@ -1,19 +1,19 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model IEnumerable<OrderMngmntSystem.Models.Customer>
+@model IEnumerable<OrderMngmntSystem.Models.CustomerOrder>
 
 @{
-    ViewData["Title"] = "GetCustomerDetails";
+    ViewData["Title"] = "GetCustomerOrderDetails";
 }
 
 <div>
-    <h2 class="text-primary">All Customer Details List</h2>
+    <h2 class="text-primary">All Customers Order Details List</h2>
 </div>
 
 <div class="container p-3">
     <div>
-        <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: lightgoldenrodyellow;float: right" asp-controller="Admin" asp- asp-action="GetCustomerOrderDetails">Go To Customers Order Details</a>
+        <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: lightgoldenrodyellow;float: right" asp-controller="Admin" asp- asp-action="GetCustomerDetails">Go To Customer Details</a>
     </div>
     @if (Model.Count() > 0)
     {
@@ -21,16 +21,16 @@
         <thead>
             <tr>
                 <th>
+                    OrderId
+                </th>
+                <th>
                     customerId
                 </th>
                 <th>
-                    customerName
-                </th>
-                <th>
-                    Address
+                    productId
                 </th>
                  <th>
-                    OrderId
+                    OrderedDate
                 </th>
                 @*<th>
                 </th>*@
@@ -41,10 +41,10 @@
             @foreach (var detail in Model)
             {
             <tr>
-                <td>@detail.customerId</td>
-                <td>@detail.customerName</td>
-                <td>@detail.Address</td>
                 <td>@detail.OrderId</td>
+                <td>@detail.customerId</td>
+                <td>@detail.productId</td>
+                <td>@detail.OrderedDate</td>
                 <td class="text-center">
                     <div class="w-75 btn-group" role="group">
                    @*    <a asp-controller="Admin" asp-route-prod="@detail.customerId" asp-action="DeleteCategory" class="btn btn-danger mx-1">
