--- a/OrderMngmntSystem/Views/Customer/EditProduct.cshtml
+++ b/OrderMngmntSystem/Views/Customer/EditProduct.cshtml
@@ -4,17 +4,17 @@
 @model IEnumerable<OrderMngmntSystem.Models.ProductService>
 
 @{
-    ViewData["Title"] = "GetProductDetails";
+    ViewData["Title"] = "EditProduct";
 }
 
 <div>
-    <h2 class="text-primary">All Product Details List</h2>
+    <h2 class="text-primary">Edit Product</h2>
 </div>
 
 <div class="container p-3">
-    <div>
+    @*<div>
         <a class="nav-link text-dark btn-primary font-Italic-bold" style="margin: 12px; background-color: lavenderblush;float: right" asp-controller="Admin" asp- asp-action="GetCustomerDetails">Go To Customer Details</a>
-    </div>
+    </div>*@
     @if (Model.Count() > 0)
     {
     <table class="table table-bordered table-striped" style="width:100%">
@@ -42,7 +42,7 @@
 
                 <td class="text-center">
                     <div class="w-75 btn-group" role="group">
-                       <a asp-controller="Admin" asp-route-prod="@detail.productId" asp-action="DeleteProduct" class="btn btn-danger mx-1">
+                       <a asp-controller="Customer" asp-route-prod="@detail.productId" asp-action="DeleteProduct" class="btn btn-danger mx-1">
                             <i class="fas fa-edit"></i> Delete
                         </a>
                         @*<a asp-controller="Customer" asp-route-prod="@detail.productId" asp-action="AddProduct" class="btn btn-primary mx-3">
