--- a/OrderMngmntSystem/wwwroot/css/site.css
+++ b/OrderMngmntSystem/wwwroot/css/site.css
@@ -9,13 +9,14 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #B4ECE3;
+    font-family: 'Arial Rounded MT'
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #B4ECE3;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -59,8 +60,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #F4FCD9
 }
 .footer {
   position: absolute;
